flask-app-books/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-books
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    name: flask-app-books
